fix:(contact) error message alignment fixed

--- a/src/Styles/OrderTrackingModal.css
+++ b/src/Styles/OrderTrackingModal.css
@@ -82,7 +82,7 @@
 
 .error-icon {
   font-size: 48px;
-  margin-bottom: 16px;
+  
   display: block;
 }
 
